package PAI.factory;

import PAI.domain.CourseEdition;

import java.util.List;

public interface ICourseEditionListFactory {

        List<CourseEdition> newList();

}
