package PAI.repository.studyPlanRepository;

import PAI.VOs.*;
import PAI.ddd.IRepository;
import PAI.domain.studyPlan.StudyPlan;

import java.util.List;

public interface IStudyPlanRepository extends IRepository<StudyPlanID, StudyPlan> {

}